[gd_scene load_steps=47 format=2]

[ext_resource path="res://scenes/shared/game/characters/Boyfriend.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/shared/game/HUDPackage2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://packages/fnf/resources/graphics/week1/stagecurtains.png" type="Texture" id=3]
[ext_resource path="res://packages/fnf/scripts/game/levels/Level_Stage.gd" type="Script" id=4]
[ext_resource path="res://packages/fnf/resources/graphics/week1/Clouds.png" type="Texture" id=5]
[ext_resource path="res://packages/fnf/resources/graphics/week1/stageback.png" type="Texture" id=6]
[ext_resource path="res://packages/fnf/resources/graphics/week1/stagefront.png" type="Texture" id=7]
[ext_resource path="res://packages/fnf/characters/jazz/JazzIconExtended.tscn" type="PackedScene" id=8]
[ext_resource path="res://packages/fnf/resources/graphics/week1/back.png" type="Texture" id=9]
[ext_resource path="res://packages/fnf/resources/graphics/week1/sky1.png" type="Texture" id=10]
[ext_resource path="res://packages/fnf/resources/graphics/week1/AmserEnvironment.tres" type="Environment" id=11]
[ext_resource path="res://packages/fnf/resources/graphics/week1/ship2D.tscn" type="PackedScene" id=12]
[ext_resource path="res://packages/fnf/characters/jazz/jazz.tscn" type="PackedScene" id=13]
[ext_resource path="res://packages/fnf/characters/anita/Anita2D.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/shared/game/characters/Girlfriend.tscn" type="PackedScene" id=15]
[ext_resource path="res://packages/fnf/resources/graphics/week1/AmserBackground.glb" type="PackedScene" id=16]
[ext_resource path="res://packages/spacedance/amserCam.gd" type="Script" id=17]
[ext_resource path="res://scripts/shaders/Ripple.tres" type="Shader" id=18]
[ext_resource path="res://scripts/shaders/speedLinesHorizontal.tres" type="Shader" id=19]
[ext_resource path="res://assets/models/shaders/crtShader.tres" type="Shader" id=20]
[ext_resource path="res://packages/fnf/resources/graphics/week1/tx_noise.png" type="Texture" id=21]
[ext_resource path="res://scenes/shared/game/characters/Boyfriend3D.tscn" type="PackedScene" id=22]
[ext_resource path="res://packages/fnf/resources/graphics/week1/tx_noise2.png" type="Texture" id=23]
[ext_resource path="res://scenes/shared/game/characters/Girlfriend3d.tscn" type="PackedScene" id=24]
[ext_resource path="res://tools/Song_Composers.tscn" type="PackedScene" id=25]
[ext_resource path="res://packages/fnf/resources/graphics/week1/tx_noise3.png" type="Texture" id=26]
[ext_resource path="res://packages/fnf/resources/graphics/week1/liz016Frame2.png" type="Texture" id=27]
[ext_resource path="res://packages/fnf/resources/graphics/week1/liz016.png" type="Texture" id=28]
[ext_resource path="res://scripts/shaders/glitch.tres" type="Shader" id=29]
[ext_resource path="res://packages/fnf/resources/graphics/week1/016smileFrame2.png" type="Texture" id=30]
[ext_resource path="res://packages/fnf/resources/graphics/week1/016smileFrame1.png" type="Texture" id=31]
[ext_resource path="res://packages/fnf/resources/graphics/week1/016smileFrame4.png" type="Texture" id=32]
[ext_resource path="res://packages/fnf/resources/graphics/week1/016smileFrame3.png" type="Texture" id=33]
[ext_resource path="res://packages/fnf/resources/graphics/week1/Timocat_yellow.png" type="Texture" id=34]
[ext_resource path="res://packages/fnf/resources/graphics/week1/Timocat_blue.png" type="Texture" id=35]
[ext_resource path="res://packages/fnf/resources/graphics/week1/Timocat_red.png" type="Texture" id=36]
[ext_resource path="res://packages/fnf/resources/graphics/week1/slime.png" type="Texture" id=37]
[ext_resource path="res://packages/fnf/resources/graphics/week1/zoom.png" type="Texture" id=38]
[ext_resource path="res://packages/fnf/resources/graphics/week1/aikoMarisol.png" type="Texture" id=39]

[sub_resource type="AnimatedTexture" id=8]
flags = 23
frames = 3
fps = 10.0
frame_0/texture = ExtResource( 21 )
frame_1/texture = ExtResource( 23 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 26 )
frame_2/delay_sec = 0.0

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 19 )
shader_param/line_color_a = Color( 1, 1, 1, 0 )
shader_param/line_color_b = Color( 1, 1, 1, 1 )
shader_param/line_threshold = -0.025
shader_param/inverse_speed = 10.0
shader_param/line_length = 1000.0
shader_param/angle = 0.0
shader_param/noise = SubResource( 8 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 18 )
shader_param/wave_count = 10.0
shader_param/speed = 1.4
shader_param/height = 0.016

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 20 )
shader_param/overlay = true
shader_param/scanlines_opacity = 0.0
shader_param/scanlines_width = 0.0
shader_param/grille_opacity = 0.333
shader_param/resolution = Vector2( 640, 480 )
shader_param/pixelate = false
shader_param/roll = true
shader_param/roll_speed = 3.0
shader_param/roll_size = 16.099
shader_param/roll_variation = 2.393
shader_param/distort_intensity = 0.006
shader_param/noise_opacity = 0.257
shader_param/noise_speed = 5.0
shader_param/static_noise_intensity = 0.06
shader_param/aberration = -0.014
shader_param/brightness = 1.4
shader_param/discolor = false
shader_param/warp_amount = 0.341
shader_param/clip_warp = false
shader_param/vignette_intensity = 0.4
shader_param/vignette_opacity = 0.192

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 29 )
shader_param/shake_power = 0.0
shader_param/shake_rate = 0.257
shader_param/shake_speed = 3.119
shader_param/shake_block_size = 30.0
shader_param/shake_color_rate = 0.005

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ), ExtResource( 32 ) ],
"loop": true,
"name": "016Smile",
"speed": 10.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 28 ) ],
"loop": true,
"name": "Blink",
"speed": 10.0
} ]

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 1
light_mode = 1

[node name="LevelAmser" type="WorldEnvironment"]
environment = ExtResource( 11 )
script = ExtResource( 4 )
performers = {
"metronome": "gf",
"opponent": "dad",
"player": "bf"
}
character_paths = {
"bf": NodePath("Boyfriend"),
"dad": NodePath("jazz"),
"gf": NodePath("Girlfriend")
}
step_zone_paths = {
"opponent": NodePath("HUDPackage2D/HUD/Visible_Elements/Opponent_Step_Zone"),
"player": NodePath("HUDPackage2D/HUD/Visible_Elements/Player_Step_Zone")
}
hud_path = NodePath("HUDPackage2D/HUD")

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.293507, 0, -0.955957, 0, 1, 0, 0.955957, 0, 0.293507, -343.783, 95.8343, 165.641 )
far = 268.7
script = ExtResource( 17 )

[node name="CanvasLayer3" type="CanvasLayer" parent="."]

[node name="SpeedLines" type="ColorRect" parent="CanvasLayer3"]
visible = false
material = SubResource( 4 )
margin_top = -654.0
margin_right = 1412.0
margin_bottom = 178.0

[node name="SpeedLines2" type="ColorRect" parent="CanvasLayer3/SpeedLines"]
material = SubResource( 4 )
margin_top = 1193.0
margin_right = 1412.0
margin_bottom = 2025.0

[node name="BlackBar" type="ColorRect" parent="CanvasLayer3"]
visible = false
margin_right = 1285.0
margin_bottom = 82.0
color = Color( 0, 0, 0, 1 )

[node name="BlackBar2" type="ColorRect" parent="CanvasLayer3"]
visible = false
margin_top = 638.0
margin_right = 1285.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="HUDPackage2D" parent="." instance=ExtResource( 2 )]

[node name="Cam_HUD" parent="HUDPackage2D" index="2"]
zoom = Vector2( 1.111, 1.111 )

[node name="Ratings_List" parent="HUDPackage2D/HUD/Visible_Elements" index="0"]
position = Vector2( 350, 320 )

[node name="AmserBackground" parent="." instance=ExtResource( 16 )]
transform = Transform( 0.898288, 0, 0, 0, 0.898288, 0, 0, 0, 0.898288, -324.27, 90.7631, 167.357 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="woaa" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource( 2 )
margin_right = 1551.0
margin_bottom = 1017.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
visible = false
material = SubResource( 3 )
margin_right = 38.0
margin_bottom = 32.0
rect_scale = Vector2( 33.711, 22.56 )

[node name="glitch" type="ColorRect" parent="CanvasLayer2"]
visible = false
material = SubResource( 7 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 37.2802, 22.4543 )

[node name="jazz" parent="." instance=ExtResource( 13 )]
transform = Transform( 0.779832, 0.25554, -1.99132, -0.0931826, 2.13858, 0.237944, 2.00549, 0, 0.78538, -340.007, 91.302, 160.867 )
icon = ExtResource( 8 )

[node name="Boyfriend" parent="." instance=ExtResource( 22 )]
transform = Transform( 0.232809, 0, -1.13295, 0, 1.15663, 0, 1.13295, 0, 0.232809, -338.502, 90.616, 171.783 )
render_priority = 1
death_scene_path = "res://scenes/shared/game/game_over/GameOver.tscn"

[node name="Girlfriend" parent="." instance=ExtResource( 24 )]
transform = Transform( 0.351403, 0, -1.34963, 0, 1.39463, 0, 1.34963, 0, 0.351403, -336.079, 90.5493, 161.367 )
render_priority = 1
idle_frequency = 1

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -362.907, 148.504, 166.045 )
omni_range = 145.585

[node name="LizAnd016" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.36577, 0, -0.930705, 0, 1, 0, 0.930705, 0, 0.36577, -304.679, 95.1257, 171.131 )
visible = false
transparent = false
double_sided = false
alpha_cut = 1
render_priority = 1
frames = SubResource( 6 )
animation = "Blink"
frame = 5
playing = true

[node name="Slime" type="Sprite3D" parent="LizAnd016"]
transform = Transform( 1.38675, 0, -0.00460348, 0, 1.43725, 0, 0.265045, 0, 1.03553, -1.67108, -1.36752, 20.0904 )
render_priority = 1
texture = ExtResource( 37 )

[node name="Zoom" type="Sprite3D" parent="LizAnd016"]
transform = Transform( 0.975821, 0, -0.218569, 0, 1, 0, 0.218569, 0, 0.975821, 5.83015, 0.335213, 3.33847 )
transparent = false
double_sided = false
alpha_cut = 1
texture = ExtResource( 38 )

[node name="AikoMarisol" type="Sprite3D" parent="LizAnd016"]
transform = Transform( 0.975821, 0, -0.218569, 0, 1, 0, 0.218569, 0, 0.975821, 4.23363, 0.335213, 1.15018 )
transparent = false
double_sided = false
alpha_cut = 1
texture = ExtResource( 39 )

[node name="Timocat" type="Sprite3D" parent="."]
transform = Transform( 0.0767883, 0, -0.997047, 0, 1, 0, 0.997047, 0, 0.0767883, -313.969, 93.3172, 180.266 )
double_sided = false
render_priority = 1
texture = ExtResource( 35 )

[node name="Timocat2" type="Sprite3D" parent="."]
transform = Transform( -0.14755, 0, 0.989054, 0, 1, 0, -0.989054, 0, -0.14755, -322.285, 93.3172, 158.984 )
texture = ExtResource( 36 )

[node name="Timocat3" type="Sprite3D" parent="."]
transform = Transform( 0.260555, 0, -0.965459, 0, 1, 0, 0.965459, 0, 0.260555, -323.987, 93.5868, 184.594 )
double_sided = false
alpha_cut = 2
render_priority = 1
texture = ExtResource( 34 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="BG" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.9, 0.9 )

[node name="Stageback" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -600, -200 )
z_index = -3
texture = ExtResource( 6 )
centered = false

[node name="Stagefront" type="Sprite" parent="ParallaxBackground/BG"]
visible = false
position = Vector2( -650, 600 )
scale = Vector2( 1.1, 1.1 )
z_index = -2
texture = ExtResource( 7 )
centered = false

[node name="Back" type="Sprite" parent="ParallaxBackground/BG"]
position = Vector2( 613.333, 492.813 )
scale = Vector2( 0.977431, 0.979282 )
texture = ExtResource( 9 )

[node name="GF" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.95, 0.95 )

[node name="Girlfriend" parent="ParallaxBackground/GF" instance=ExtResource( 15 )]

[node name="Battle" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false

[node name="Boyfriend" parent="ParallaxBackground/Battle" instance=ExtResource( 1 )]

[node name="Anita" parent="ParallaxBackground/Battle" instance=ExtResource( 14 )]
position = Vector2( -14, 162 )

[node name="FG" type="ParallaxLayer" parent="ParallaxBackground"]
visible = false
motion_scale = Vector2( 0, 0 )

[node name="Sky1" type="Sprite" parent="ParallaxBackground/FG"]
position = Vector2( 30.6662, 14.9999 )
scale = Vector2( 0.906944, 0.872222 )
texture = ExtResource( 10 )

[node name="Clouds" type="Sprite" parent="ParallaxBackground/FG"]
modulate = Color( 1, 1, 1, 0.356863 )
material = SubResource( 9 )
position = Vector2( 24.6664, 132 )
scale = Vector2( 0.899, 0.682 )
texture = ExtResource( 5 )

[node name="Stagecurtains" type="Sprite" parent="ParallaxBackground/FG"]
visible = false
position = Vector2( -350, -150 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )
centered = false

[node name="Ship2D" parent="ParallaxBackground/FG" instance=ExtResource( 12 )]
position = Vector2( 18.6662, 181 )
scale = Vector2( 0.761277, 0.746598 )
frame = 2

[node name="AuthorLayer" type="CanvasLayer" parent="."]

[node name="ColorRect2" parent="AuthorLayer" instance=ExtResource( 25 )]
margin_left = 0.0
margin_top = 176.0
margin_right = 431.0
margin_bottom = 278.0
composers = "SAKK, SleP16"
songName = "Dysphoria"

[editable path="HUDPackage2D"]
